# multitenant-saga-storefront

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.infra.yml  pyproject.toml  reset-full.ps1
apps/carts/: apps.py  tasks.py  urls.py
apps/carts/migrations/: 0001_initial.py
apps/carts/models/: __init__.py  applied_coupon.py  cart.py  cart_item.py  cart_status.py
apps/carts/serializers/: __init__.py  add_cart_item.py  applied_coupon.py  apply_coupon.py  cart.py  cart_item.py  (+5 more)
apps/catalog/: apps.py  serializers.py  serializers_admin.py  urls.py  urls_admin.py
apps/core/: authentication.py  celery_helpers.py  logging_filters.py  pagination.py  request_context.py  responses.py  spectacular_hooks.py  tenant_context.py  urls.py
apps/coupons/: apps.py  serializers_admin.py  urls.py  urls_admin.py
apps/customers/: apps.py  serializers.py  serializers_admin.py  serializers_platform.py  urls.py  urls_admin.py
apps/files/: apps.py
apps/iam/: __init__.py  admin.py  apps.py  authentication.py  throttles.py  urls_admin.py
apps/orders/: apps.py  tasks.py  urls.py  urls_admin.py
apps/payments/: apps.py  services.py  tasks.py  urls.py  urls_admin.py
apps/tenants/: admin.py  apps.py  models.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py
postman/: README.md  acme-cart.postman_collection.json  acme-cart.postman_environment.json
scripts/: bootstrap.py  init-db.sql  verify_reconcile.py  verify_stripe_integration.py
tests-ts/: README.md  biome.json  fixtures.ts  helpers.ts  invoices.test.ts  journey.test.ts  package.json  provision_fixtures.ts  tsconfig.json
tests-ts/admin/: auth-throttle.test.ts  auth.test.ts  boundary.test.ts  helpers.ts
tests-ts/carts/: concurrency.test.ts  idempotency.test.ts  operations.test.ts
tests-ts/catalog/: admin.test.ts  image.test.ts  storefront.test.ts
tests-ts/coupons/: admin.test.ts  storefront.test.ts
tests-ts/customers/: admin.test.ts  platform.test.ts
tests-ts/k6/: README.md
tests-ts/orders/: admin.test.ts  purchase-order.test.ts
tests-ts/payments/: admin.test.ts  gateways.test.ts
tests-ts/platform/: reconcile.test.ts
tests-ts/tenant-isolation/: admin.test.ts  storefront.test.ts
tests-ts/tenants/: admin.test.ts
(+206 files in other folders)
